@@ -525,8 +525,9 @@ sub issueCACertificate
 {
     my ($self, %args) = @_;
 
-    throw EBox::Exceptions::DataMissing(data => __('Organization Name'))
-        unless defined( $args{orgName} );
+    if (not defined $args{orgName}) {
+        throw EBox::Exceptions::DataMissing(data => __('Organization Name'));
+    }
     $self->_checkCertificateFieldsCharacters(%args);
 
     # Define the distinguished name -> default values in configuration file
@@ -709,6 +710,7 @@ sub CAPublicKey
 #       requestFile - path to save the new certificate request
 #                    (Optional)
 #       certFile - path to store the new certificate file (Optional)
+#       openchange - when is true it lets you to issue the openchange certificate (default: true)
 #
 #       subjAltNames - Array ref containing the subject alternative
 #                      names in a hash ref with the following keys:
@@ -739,13 +741,22 @@ sub issueCertificate
     my ($self, %args) = @_;
 
     # Treat arguments
-    throw EBox::Exceptions::DataMissing(data => __('Common Name'))
-        unless defined( $args{commonName} );
-    $self->_checkCertificateFieldsCharacters(%args);
-
-    EBox::warn("Two ways to declare expiration date through days and endDate. "
-            . "Using endDate...")
-        if ( defined( $args{days} ) and defined( $args{endDate} ) );
+    if (not defined $args{commonName}) {
+        $self->_checkCertificateFieldsCharacters(%args);
+    }
+    if (not $args{openchange}) {
+        my $openchangeCN = $self->_openchangeCertificateCN();
+        if ($openchangeCN and ($openchangeCN eq $args{commonName})) {
+            throw EBox::Exceptions::External(
+                __x('You cannot issue a certificate with CN {cn} because that CN is used by openchange. Saving changes or restarting openchange will regenerate that certifcate if needed',
+                   cn => $openchangeCN)
+            );
+        }
+    }
+    if ( defined( $args{days} ) and defined( $args{endDate} ) ) {
+        EBox::warn("Two ways to declare expiration date through days and endDate. "
+                       . "Using endDate...");
+    }
 
     my $days = undef;
     if (not defined($args{endDate}) ) {
@@ -1951,8 +1962,8 @@ sub _supportActions
 sub _setConf
 {
     my ($self) = @_;
-
-    EBox::CA::Certificates->genCerts();
+    my $skipCN = $self->_openchangeCertificateCN();
+    EBox::CA::Certificates->genCerts($skipCN);
 }
 
 # Group: Private methods
@@ -2062,6 +2073,7 @@ sub _createRequest # (reqFile, genKey, privKey, keyPassword, dn, needPass?)
     my ($self, %args) = @_;
     # remove previous request file with the same name, to avoid errors
     unlink $args{reqFile};
+
     # To create the request the distinguished name is needed
     my $cmd = 'req';
     $self->_commonArgs('req', \$cmd);
@@ -2704,4 +2716,13 @@ sub caExpirationDate
     return $self->{caExpirationDate};
 }
 
+sub _openchangeCertificateCN
+{
+    my ($self) = @_;
+    my $openchange = $self->global()->modInstance('openchange');
+    if ($openchange) {
+        return $openchange->certificateCN();
+    }
+    return undef;
+}
 1;
